[project]
name = "cipher-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.10.11",
    "fastapi>=0.115.8",
    "playwright>=1.48.0",
    "psutil>=7.0.0",
    "requests>=2.32.3",
    "uvicorn>=0.33.0",
    "websockets>=13.1",
]
